# p2p-lab1-cpp

./: .gitignore  CMakeLists.txt  README.md  kod.txt  repomix-output.xml
client/: main.cpp
pear1/: main.cpp
peer1/: main.cpp
server/: main.cpp
third/: main.cpp
tracker/: main.cpp
